syntax = "proto3";

package org.loopring.lightcone.proto;

message Order {

}

message SubmitOrderReq {}
message SubmitOrderResp {}

message GetOrdersReq {}
message GetOrdersResp {}

message CancelOrdersReq {}
message CancelOrdersResp {}

message GetOrder {}
message OneOrder {}

message GetOrders {}
message MultiOrders {}

message GetTopOrders {}
message TopOrders {}

message FetchTopOrderIds {}
message TopOrdersIds {}

message SaveOrders {}
message SaveUpdatedOrders {}
message OrdersSaved {}

message UpdateOrders {}
message OrdersUpdated {}

message SoftCancelOrders {}
message OrdersSoftCancelled {}
message NotifyOrderCancelled {}
message NotifyOrdersSoftCancelled {}

message DeferOrder {
    Order order = 1;
    int64 deferedTime = 2;
}

message MarkOrdersDeferred {
    repeated DeferOrder deferOrders = 1;
}

message OrderStatusChanged {}
message MarkOrdersSettling {
    repeated Order orders = 1;
}

message MarkOrdersBeingMatched {
    repeated Order orders = 1;
}

message UpdateOrdersById {}
